# synmax_takehome

./: .gitignore  README.md  polygon_api_numbers.csv  pyproject.toml  requirements.txt  sqlite.db  venv_here.bat  venv_shell.bat
src/synmax_takehome/: __init__.py  config.py  models.py
src/synmax_takehome/api/: __init__.py  deps.py  main.py
src/synmax_takehome/api/routers/: __init__.py  spatial.py  wells.py
src/synmax_takehome/cli/: generate_polygon_csv.py  load_wells.py
src/synmax_takehome/scraping/: __init__.py  fetch.py  parse.py
src/synmax_takehome/storage/: __init__.py  repository.py  schema.py
tests/: README.md  test_parse.py  test_repository.py  test_smoke_scrape_vs_api.py
web_pages/: 30-015-25325.html  30-015-25327.html  30-045-35432.html
