[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "synmax-takehome"
version = "0.1.0"
description = "SynMax Python dev take-home: NM well scrape + SQLite + API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "playwright>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
synmax-load-wells = "synmax_takehome.cli.load_wells:main"
synmax-generate-polygon-csv = "synmax_takehome.cli.generate_polygon_csv:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
